fix: layout broke in mobile browser

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -4,6 +4,16 @@
     width: 100%;
 }
 
+.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.is-upgraded {width: 70%;}
+
+
+div#todo-form-edit, div#todo-form-add {
+    position: relative;
+    left: 25%;
+    width: 50%;
+    right: 25%;
+}
+
 .demo-card-wide > .mdl-card__title {
   color: #fff;
   height: 75px;
@@ -32,13 +42,13 @@ a.mdl-button.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect {
 }
 
 .card-content {
-  height: 400px;
+  /*height: 400px;*/
 }
 
 .align-center {
   vertical-align: middle;
   text-align: center;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 .demo-card-wide.mdl-card.mdl-shadow--2dp {
